muleplapeli/src/main/resources/api/examples/errors/415.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "TOO_MANY_REQUEST"
      level: error
      description: "Your request has been rejected due to rate limitation. Please check your subscribed service level agreement."